@@ -1,10 +1,12 @@
 #!perl
 
+use utf8;
 use Benchmark qw(:all);
 use URI::Encode::XS qw(uri_encode_utf8 uri_decode_utf8);
-use URI::Fast qw(uri uri_split);
+use URI::Fast qw(uri uri_split iri);
 use URI::Split qw();
 use URI;
+use IRI;
 
 my $POD;
 
@@ -23,9 +25,11 @@ print $POD q{# PODNAME: URI::Fast::Benchmarks
 Various operations comparing L<URI::Fast> against L<URI>'s performance. The
 script to recreate is included in the C<bench> folder of the distribution.
 
-Tests were performed on my development machine, a 2015 MacBook Pro (2.7 GHz
-Intel Core i5, 8GB 1867 MHz DDR3 RAM) using Perl 5.24 installed using
-L<perlbrew|https://perlbrew.pl>.
+Tests were performed on a 2015 Chromebook Pixel running Gallium linux using
+Perl 5.26 installed with L<perlbrew|https://perlbrew.pl>. Earlier testing was
+done with a similarly equipped MacBook Pro. It is interesting to note that
+URI::Fast's rate is roughly the same, but URI's rate increased significantly
+over Perl compiled for MacOS.
 
 };
 
@@ -34,6 +38,7 @@ my @urls = (
   'http://www.test.com',
   'https://test.com/some/path?aaaa=bbbb&cccc=dddd&eeee=ffff',
   'https://user:pwd@192.168.0.1:8000/foo/bar?baz=bat&slack=fnord&asdf=the+quick%20brown+fox+%26+hound#foofrag',
+  'https://www.çæ∂î∫∫å.com/ƒø∫∂é®?ƒøø=ßå®#ƒ®å©',
 );
 
 my $encode_input = "Ῥόδος¢€" . q{! * ' ( ) ; : @ & = + $ , / ? # [ ] %} x 10;
@@ -127,7 +132,7 @@ test 'Stringification', 500_000, {
   'URI::Fast' => sub{ my $uri = uri $urls[3]; my $str = "$uri" },
 };
 
-test 'uri_split', 500_000, {
+test 'uri_split', 1_000_000, {
   'URI::Split' => sub{ my @uri = URI::Split::uri_split($urls[3]) },
   'URI::Split' => sub{ my @uri = URI::Split::uri_split($urls[3]) },
   'URI::Fast' => sub{ my @uri = uri_split($urls[3]) },
@@ -141,6 +146,26 @@ test 'Encode', 2_000_000, {
 test 'Decode', 2_000_000, {
   'URI::Encode::XS' => sub{ uri_decode_utf8($decode_input) },
   'URI::Fast' => sub{ URI::Fast::decode($decode_input) },
+};
+
+test 'IRI - ctor', 500_000, {
+  'IRI'       => sub{ my $iri = IRI->new($urls[4]) },
+  'URI::Fast' => sub{ my $iri = iri $urls[4] },
+};
+
+test 'IRI - query_hash', 500_000, {
+  'IRI' => sub{ my $iri = IRI->new($urls[4]); my %q = $iri->query_form },
+  'URI::Fast' => sub{ my $iri = iri $urls[4]; my $q = $iri->query_hash },
+};
+
+test 'IRI - set param', 500_000, {
+  'IRI' => sub{ my $iri = IRI->new($urls[4]); $iri->query_form('ßåΩ' => 'ßå†') },
+  'URI::Fast' => sub{ my $iri = iri $urls[4]; $iri->param('ßåΩ', 'ßå†') },
+};
+
+test 'IRI - update path', 500_000, {
+  'IRI' => sub{ my $iri = IRI->new($urls[4]); $iri->path('/Ῥόδος¢€') },
+  'URI::Fast' => sub{ my $iri = iri $urls[4]; $iri->path('/Ῥόδος¢€') },
 };
 
 close $POD;
